--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requests = "^2.26.0"
 python-dotenv = "^0.19.2"
 Authlib = "^0.15.5"
 pandas = "^1.3.4"
-apache-airflow = { path = "../airflow", develop = true }
+#apache-airflow = { path = "../airflow", develop = true }
+apache-airflow = "^2.2.2"
 
 [tool.poetry.dev-dependencies]
 black = "^21.10b0"
